--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,10 +4,10 @@
 
 :root {
   --astro-code-color-text: #fff;
-  --astro-code-color-background: #212325;
+  --astro-code-color-background: #454545;
   --astro-code-token-constant: #ffffff80;
-  --astro-code-token-string: #FED2CE;
-  --astro-code-token-comment: #ffffff60;
+  --astro-code-token-string: #6b8b73;
+  --astro-code-token-comment: #79797960;
   --astro-code-token-keyword: #8B9FE8;
   --astro-code-token-parameter: #E681D8;
   --astro-code-token-function: #FFA9A4;
