--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -52,3 +52,4 @@ import "../styles/global.css";
   defer
   src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.js"
 ></script>
+<!--Flowbit script: provides the open and close state changes for all the nav menu dropdown functions --> <script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/flowbite.bundle.js"></script>
