--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,6 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Navigation from "../components/global/Navigation.astro";
-
+import XNav from "../components/global/XNav.astro";
 import Footer from "../components/global/Footer.astro";
 
 ---
@@ -12,7 +11,7 @@ import Footer from "../components/global/Footer.astro";
   </head>
 
   <body class="bg-black">
-    <Navigation />
+    <XNav />
     <slot />
     <Footer />
   </body>
